--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "yulcat",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "mongodb": "^6.5.0",
     "nodemon": "^3.1.0"
   }
 }
