--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0"
